# src/api/routers/user.go
@@ -2,6 +2,7 @@ package routers
 
 import (
 	"github.com/alireza-fa/blog-go/src/api/handlers"
+	"github.com/alireza-fa/blog-go/src/api/middlewares"
 	"github.com/go-chi/chi"
 )
 
@@ -11,4 +12,14 @@ func UserRouters(router chi.Router) {
 	router.Post("/register/", handler.UserRegister)
 	router.Post("/verify/", handler.UserVerify)
 	router.Post("/login/", handler.UserLogin)
+
+	router.Group(authRouter)
+}
+
+func authRouter(router chi.Router) {
+	handler := handlers.NewUserFrontHandler()
+
+	router.Use(middlewares.Authentication)
+
+	router.Get("/profile/", middlewares.Authorization(handler.UserProfile, []string{"default"}))
 }
